Fix some buttons not being visible

--- a/user.css
+++ b/user.css
@@ -27,7 +27,7 @@ input {
 }
 
 .main-playlistEditDetailsModal-textElement:focus {
-    border: 0;
+    border: 2px solid black;
 }
 
 .connect-title, .connect-header {
@@ -93,7 +93,7 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
 
 .main-trackList-trackListHeaderStuck.main-trackList-trackListHeader {
     background: var(--spice-main);
-    border: 0;
+    border: 2px solid black;
 }
 
 .main-trackList-trackListHeaderStuck .main-trackList-trackListHeaderRow {
@@ -122,7 +122,7 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
     position: absolute;
     left: 49.68%;
     top: 60%;
-    border: solid 4px;
+    border: 4px;
     border-radius: 20px;
     z-index: 5;
     color: var(--spice-subtext) !important;
@@ -142,6 +142,10 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
     cursor: pointer;
 }
 
+.control-button-heart[aria-checked=false] {
+    color: var(--spice-tab-active);
+}
+
 .player-controls__buttons {
     align-items: center;
     position: relative;
@@ -149,7 +153,7 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
 }
 
 .main-entityTitle-subtitle.main-entityTitle-small.main-entityTitle-uppercase.main-entityTitle-bold {
-    border: 4px var(--spice-text) solid;
+    border: 2px var(--spice-text) solid;
     border-radius: 4px;
     width: fit-content;
     display: inline;
@@ -230,12 +234,12 @@ span.artist-artistVerifiedBadge-badge svg:nth-child(1) {
 }
 
 .main-entityHeader-image {
-    border-radius: 10%;
+    border-radius: 0%;
 }
 
 .x-downloadButton-button {
     background: var(--spice-player);
-    border-radius: 50%;
+    border-radius: 0%;
 }
 
 
@@ -323,7 +327,7 @@ a.x-categoryCard-CategoryCard, a.x-heroCategoryCard-HeroCategoryCard {
 }
 
 .view-homeShortcutsGrid-shortcut {
-    background-color: rgba(var(--spice-rgb-selected-row), 0.6) !important;
+    background-color: var(--spice-main) !important;
 }
 
 .view-homeShortcutsGrid-shortcut:focus-within, .view-homeShortcutsGrid-shortcut:hover, .view-homeShortcutsGrid-shortcut[data-context-menu-open=true] {
@@ -361,6 +365,7 @@ a.x-categoryCard-CategoryCard, a.x-heroCategoryCard-HeroCategoryCard {
 
 .main-repeatButton-button, .main-skipForwardButton-button, .main-skipBackButton-button, .main-shuffleButton-button {
     cursor: pointer !important;
+    color: var(--spice-subtext);
 }
 
 .main-connectToFacebook-text, .main-connectToFacebook-disclaimer {
@@ -381,20 +386,20 @@ a.x-categoryCard-CategoryCard, a.x-heroCategoryCard-HeroCategoryCard {
 
 .view-homeShortcutsGrid-shortcut {
     background-color: rgba(var(--spice-rgb-selected-row), 0.6) !important;
-    border: solid 4px var(--spice-text);
-    border-radius: 10px;
+    border: solid 2px var(--spice-text);
+    border-radius: 0px;
     padding-bottom: 80.7px;
     transition: 500ms;
 }
 
 .main-card-card .main-card-cardLink {
-    border: solid 4px;
+    border: solid 2px;
     transition: 500ms;
-    border-radius: 27px;
+    border-radius: 0px;
 }
 
 .main-card-card {
-    border-radius: 27px!important;
+    border-radius: 0px!important;
 }
 
 .view-homeShortcutsGrid-shortcut:hover, .main-card-card .main-card-cardLink:hover {
@@ -415,9 +420,9 @@ padding-top: 8px;
     opacity: .9676;
 }
     .main-trackList-trackList {
-        border-radius: 30px;
+        border-radius: 0px;
         background-color: var(--spice-player);
-        border: 4px solid;
+        border: 2px solid;
     }
     .main-buddyFeed-friendsFeedContainer {
         border-left: solid 4px var(--spice-text);
@@ -509,15 +514,10 @@ background-color: var(--spice-text);
 }
 
 #spicetify-playlist-list > div > div:nth-child(2) > li {
-    margin: 4px -8%;
     width: 90%;
     flex-shrink: 0;
     box-sizing: border-box;
     position: relative;
-    border-radius: 20px;
-    margin-bottom: -1px;
-    height: 100%;
-    border: 4px solid var(--spice-text);
     display: flex;
     text-align: center;
     flex-direction: column;
@@ -525,6 +525,10 @@ background-color: var(--spice-text);
 
 #spicetify-playlist-list > div > div:nth-child(2) > li:hover {
     border-color: var(--spice-button);
+}
+
+.os-scrollbar-handle {
+    display: none !important;
 }
 
 #spicetify-playlist-list > div {
